feat(build); config releses