@@ -57,6 +57,23 @@ lazy val root = (project in file("."))
   .settings(
     Compile / run / fork := true,
     Compile / runMain / fork := true,
-    javaOptions ++= Seq("-Xmx1g", "-Xms256m", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=200", "-XX:+UseStringDeduplication"),
+    javaOptions ++= Seq(
+      "-Xmx1g", "-Xms256m", "-XX:+UseG1GC", "-XX:MaxGCPauseMillis=200", "-XX:+UseStringDeduplication",
+      // JDK 11+ compatibility — Spark 3.3.1 / Hadoop 3.3.4 / Hive 3.1.3
+      "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+      "--add-opens", "java.base/java.lang.invoke=ALL-UNNAMED",
+      "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
+      "--add-opens", "java.base/java.io=ALL-UNNAMED",
+      "--add-opens", "java.base/java.net=ALL-UNNAMED",
+      "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+      "--add-opens", "java.base/java.util=ALL-UNNAMED",
+      "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED",
+      "--add-opens", "java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+      "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens", "java.base/sun.nio.cs=ALL-UNNAMED",
+      "--add-opens", "java.base/sun.security.action=ALL-UNNAMED",
+      "--add-opens", "java.base/sun.util.calendar=ALL-UNNAMED",
+      "--add-exports", "java.base/sun.nio.ch=ALL-UNNAMED"
+    ),
     run / outputStrategy := Some(StdoutOutput)
   )
